# Equivariant-SSL-Tutorial

./: .gitignore  README.md  cqt_intuition_section.ipynb  data.py  mdb_stem_synth_very_small.csv  pesto_tutorial_simplified.ipynb  pyproject.toml  test_files.csv  train_files.csv  train_files_full_paths.csv  tutorial_notebook(2).py  tutorial_notebook.ipynb
scripts/: download_data.py  generate_all_hcqts.py
