[project]
name = "equivariant-ssl-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "lightning>=2.1.3",
    "matplotlib>=3.10.8",
    "mir-eval>=0.8.2",
    "mirdata>=1.0.0",
    "nnaudio>=0.3.2",
    "numpy<2",
    "rich>=13.7.0",
    "rootutils>=1.0.7",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "wandb>=0.25.0",
]
